--- a/www/index.html
+++ b/www/index.html
@@ -131,10 +131,10 @@
             this.popovers = [];
             this.first_connection = true;
         }
-        var Auth, Image, Video, Sound, Person, Comment, MetaAlgorithm,
+        var Auth, Image, Video, Sound, Person, CommentMesssage, MetaAlgorithm,
             Query, Catalog, Vote, OpenGLDimension, OpenGLUniform, OpenGLContext,
             OpenGLProgram, OpenGLStage, OpenGLPipeline, AlgorithmState,
-            Algorithm, Custom, Error, Captcha, Message;
+            AlgorithmMessage, Custom, ErrorMessage, Captcha, Message;
 
         var default_opengl_dimension, default_algorithm_context, default_algorithm_uniform,
             default_algorithm_program, default_algorithm_stage, default_create_algorithm;
@@ -150,9 +150,9 @@
             OpenGLStage = this.protocol.lookupType("messages.OpenGLStage");
             // OpenGLPipeline = this.protocol.lookupType("messages.OpenGLPipeline");
             // AlgorithmState = this.protocol.lookupType("messages.AlgorithmState");
-            // Algorithm = this.protocol.lookupType("messages.Algorithm");
+            AlgorithmMessage = this.protocol.lookupType("messages.Algorithm");
             // Custom = this.protocol.lookupType("messages.Custom");
-            // Error = this.protocol.lookupType("messages.Error");
+            // ErrorMessage = this.protocol.lookupType("messages.Error");
             // Captcha = this.protocol.lookupType("messages.Captcha");
             Message = this.protocol.lookupType("messages.Message");
 
