--- a/www/index.html
+++ b/www/index.html
@@ -2416,7 +2416,7 @@
                     '        </div>\n' +
                     '        <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
                     '            <input style="width:inherit; text-align:center; color:#fff;" placeholder="Context name..."\n' +
-                    '                id="' + stage_identifier + '_context_name" value="' + stage.context_name + '"></input>\n' +
+                    '                id="' + stage_identifier + '_context_name" value="' + stage.context+ '"></input>\n' +
                     '            <br>\n' +
                     '            <br>\n' +
                     '\n' +
@@ -2431,7 +2431,7 @@
                     '        </div>\n' +
                     '        <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
                     '            <input style="width:inherit; text-align:center; color:#fff;" placeholder="Program name..."\n' +
-                    '                id="' + stage_identifier + '_program_name" value="' + stage.program_name + '"></input>\n' +
+                    '                id="' + stage_identifier + '_program_name" value="' + stage.program + '"></input>\n' +
                     '            <br>\n' +
                     '            <br>\n' +
                     '\n' +
