--- a/www/index.html
+++ b/www/index.html
@@ -1299,13 +1299,13 @@
                             total_mutex = (!$("#" + mutex_these[j]).prop("checked")) && total_mutex;
 
                         if (total_mutex) {
-                            $("#" + skipped_checkbox).prop("checked", false).click() ;
+                            $("#" + skipped_checkbox).prop("checked", true).click();
                         }
                         else {
                             for (var j = 0; j < checkboxes.length; j++) {
                                 if (j == i)
                                     continue;
-                                $("#" + checkboxes[j]).prop("checked", false);
+                                $("#" + checkboxes[j]).prop("checked", false)
                             }
                         }
                         if (global_change)
@@ -1601,22 +1601,22 @@
                     })(context_identifier));
 
                 if (context.width.type == OpenGLDimension.Type.SCREEN_SIZE)
-                    $("#" + context_identifier + '_width_screen_size').prop("checked", false).click() ;
+                    $("#" + context_identifier + '_width_screen_size').prop("checked", true).click();
                 if (context.width.type == OpenGLDimension.Type.NEXT_LOWEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_width_next_lowest_power_of_two').prop("checked", false).click() ;
+                    $("#" + context_identifier + '_width_next_lowest_power_of_two').prop("checked", true).click();
                 if (context.width.type == OpenGLDimension.Type.NEXT_HIGHEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_width_next_highest_power_of_two').prop("checked", false).click() ;
+                    $("#" + context_identifier + '_width_next_highest_power_of_two').prop("checked", true).click();
                 if (context.width.type == OpenGLDimension.Type.EXACT)
-                    $("#" + context_identifier + '_width_exact').prop("checked", false).click() ;
+                    $("#" + context_identifier + '_width_exact').prop("checked", true).click();
 
                 if (context.height.type == OpenGLDimension.Type.SCREEN_SIZE)
-                    $("#" + context_identifier + '_height_screen_size').prop("checked", false).click() ;
+                    $("#" + context_identifier + '_height_screen_size').prop("checked", true).click();
                 if (context.height.type == OpenGLDimension.Type.NEXT_LOWEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_height_next_lowest_power_of_two').prop("checked", false).click() ;
+                    $("#" + context_identifier + '_height_next_lowest_power_of_two').prop("checked", true).click();
                 if (context.height.type == OpenGLDimension.Type.NEXT_HIGHEST_POWER_OF_TWO)
-                    $("#" + context_identifier + '_height_next_highest_power_of_two').prop("checked", false).click() ;
+                    $("#" + context_identifier + '_height_next_highest_power_of_two').prop("checked", true).click();
                 if (context.height.type == OpenGLDimension.Type.EXACT)
-                    $("#" + context_identifier + '_height_exact').prop("checked", false).click() ;
+                    $("#" + context_identifier + '_height_exact').prop("checked", true).click();
             }
         }
 
@@ -2116,21 +2116,21 @@
                     if (uniform.type == OpenGLUniform.Type.IVEC_FOUR)
                         $("#" + uniform_identifier + '_type_ivec4').prop("checked", true);
                     if (uniform.type == OpenGLUniform.Type.BVEC_TWO)
-                        $("#" + uniform_identifier + '_type_bvec2').prop("checked", false).click() ;
+                        $("#" + uniform_identifier + '_type_bvec2').prop("checked", true).click();
                     if (uniform.type == OpenGLUniform.Type.BVEC_THREE)
-                        $("#" + uniform_identifier + '_type_bvec3').prop("checked", false).click() ;
+                        $("#" + uniform_identifier + '_type_bvec3').prop("checked", true).click();
                     if (uniform.type == OpenGLUniform.Type.BVEC_FOUR)
-                        $("#" + uniform_identifier + '_type_bvec4').prop("checked", false).click() ;
+                        $("#" + uniform_identifier + '_type_bvec4').prop("checked", true).click();
                     if (uniform.type == OpenGLUniform.Type.MAT_TWO)
-                        $("#" + uniform_identifier + '_type_mat2').prop("checked", false).click() ;
+                        $("#" + uniform_identifier + '_type_mat2').prop("checked", true).click();
                     if (uniform.type == OpenGLUniform.Type.MAT_THREE)
-                        $("#" + uniform_identifier + '_type_mat3').prop("checked", false).click() ;
+                        $("#" + uniform_identifier + '_type_mat3').prop("checked", true).click();
                     if (uniform.type == OpenGLUniform.Type.MAT_FOUR)
-                        $("#" + uniform_identifier + '_type_mat4').prop("checked", false).click() ;
+                        $("#" + uniform_identifier + '_type_mat4').prop("checked", true).click();
                     if (uniform.type == OpenGLUniform.Type.SAMPLER_TWO_D)
-                        $("#" + uniform_identifier + '_type_sampler2d').prop("checked", false).click() ;
+                        $("#" + uniform_identifier + '_type_sampler2d').prop("checked", true).click();
                     if (uniform.type == OpenGLUniform.Type.SAMPLERCUBE)
-                        $("#" + uniform_identifier + '_type_samplercube').prop("checked", false).click() ;
+                        $("#" + uniform_identifier + '_type_samplercube').prop("checked", true).click();
 
                     uniform_js_editor = CodeMirror.fromTextArea(document.getElementById(uniform_identifier + '_js_code'), { autoRefresh: true, lineWrapping: true, lineNumbers: true, viewPortMargin: Infinity, theme: 'the-matrix height-auto', mode: 'javascript' })
                     uniform_js_editor.getWrapperElement().id = uniform_identifier + '_js_code_editor';
@@ -2667,21 +2667,21 @@
                 this.stage_codemirrors[i].push(vertices_editor);
 
                 if (stage.type == OpenGLStage.Type.SHADER)
-                    $("#" + stage_identifier + '_stage_shader').prop("checked", false).click() ;
+                    $("#" + stage_identifier + '_stage_shader').prop("checked", true).click();
                 if (stage.type == OpenGLStage.Type.MESH_POINTS)
-                    $("#" + stage_identifier + '_stage_mesh_points').prop("checked", false).click() ;
+                    $("#" + stage_identifier + '_stage_mesh_points').prop("checked", true).click();
                 if (stage.type == OpenGLStage.Type.MESH_LINES)
-                    $("#" + stage_identifier + '_stage_mesh_lines').prop("checked", false).click() ;
+                    $("#" + stage_identifier + '_stage_mesh_lines').prop("checked", true).click();
                 if (stage.type == OpenGLStage.Type.MESH_LINE_STRIP)
-                    $("#" + stage_identifier + '_stage_mesh_line_strip').prop("checked", false).click() ;
+                    $("#" + stage_identifier + '_stage_mesh_line_strip').prop("checked", true).click();
                 if (stage.type == OpenGLStage.Type.MESH_LINE_LOOP)
-                    $("#" + stage_identifier + '_stage_mesh_line_loop').prop("checked", false).click() ;
+                    $("#" + stage_identifier + '_stage_mesh_line_loop').prop("checked", true).click();
                 if (stage.type == OpenGLStage.Type.MESH_TRIANGLES)
-                    $("#" + stage_identifier + '_stage_mesh_triangles').prop("checked", false).click() ;
+                    $("#" + stage_identifier + '_stage_mesh_triangles').prop("checked", true).click();
                 if (stage.type == OpenGLStage.Type.MESH_TRIANGLE_FAN)
-                    $("#" + stage_identifier + '_stage_mesh_triangle_fan').prop("checked", false).click() ;
+                    $("#" + stage_identifier + '_stage_mesh_triangle_fan').prop("checked", true).click();
                 if (stage.type == OpenGLStage.Type.MESH_TRIANGLE_STRIP)
-                    $("#" + stage_identifier + '_stage_mesh_triangle_strip').prop("checked", false).click() ;
+                    $("#" + stage_identifier + '_stage_mesh_triangle_strip').prop("checked", true).click();
             }
         }
         GlobalState.prototype.get_ui_algorithm = function () {
@@ -2719,12 +2719,12 @@
             $(window.location.hash + "_algorithm_description").val(algorithm.description);
 
             if (algorithm.public)
-                $(window.location.hash + "_algorithm_public_checkbox").prop("checked", false).click() ;
-            else
                 $(window.location.hash + "_algorithm_public_checkbox").prop("checked", true).click();
+            else
+                $(window.location.hash + "_algorithm_public_checkbox").prop("checked", false).click();
 
             if (algorithm.state.html) {
-                $(window.location.hash + "_algorithm_html_checkbox").prop("checked", false).click() ;
+                $(window.location.hash + "_algorithm_html_checkbox").prop("checked", true).click();
                 $(window.location.hash + "_algorithm_html").show();
                 if (window.location.hash == pages.EDIT) {
                     window.edit_html_editor.setValue(algorithm.html)
@@ -2739,7 +2739,7 @@
             }
 
             if (algorithm.state.client) {
-                $(window.location.hash + "_algorithm_javascript_checkbox").prop("checked", false).click() ;
+                $(window.location.hash + "_algorithm_javascript_checkbox").prop("checked", true).click();
                 $(window.location.hash + "_algorithm_javascript").show();
                 if (window.location.hash == pages.EDIT) {
                     window.edit_javascript_editor.setValue(algorithm.client)
